<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">vip</string>
    <string name="login_type_hint_vip">vip登录</string>
    <string name="get_code">获取验证码</string>
    <string name="hint_input_phone_license">请输入手机号/营业执照编号</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_confirm_password">请确认密码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_new_password_confirm">请确认新密码</string>
    <string name="hint_new_password_length_is_wrong">请输入6至16位的密码</string>
    <string name="hint_password_set_success">密码设置成功</string>
    <string name="hint_password_not_equal">两次输入的密码不一致</string>
    <string name="hint_input_verification_code">请输入验证码</string>
    <string name="hint_get_verification_code">获取验证码</string>
    <string name="hint_get_verification_code_count_hint">后重新获取</string>
    <string name="text_login">登录</string>
    <string name="text_login_or_register">登录/注册</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_register">注册</string>
    <string name="text_not_set_temporarily">暂不设置</string>
    <string name="text_set_password">设置密码</string>
    <string name="text_set_new_password">设置新密码</string>
    <string name="text_other_login_type">其他登录方式</string>
    <string name="text_login_type_verification_code">验证码登录</string>
    <string name="text_login_type_password">密码登录</string>
    <string name="hint_input_effective_phone">请输入有效的手机号码!</string>
    <string name="hint_verification_code_has_sent">验证码已发送</string>
    <string name="hint_verification_code_is_wrong">验证码错误</string>
    <string name="hint_login_now">登录中</string>
    <string name="hint_input_nick">4-20个字符，可由中英文、数字、“_”、”-“组成</string>
    <string name="hint_change_nick">昵称不能超过20个字符</string>
    <string name="hint_change_nick_repeat">昵称不可重复</string>
    <string name="text_company_regitser">企业注册</string>
    <string name="text_company_info">企业信息</string>
    <string name="text_representative_info">代表信息</string>
    <string name="text_register_success">注册成功</string>
    <string name="text_cancel">取消</string>
    <string name="text_next">下一步</string>
    <string name="text_confirm">确定</string>
    <string name="hint_login_success">登录成功</string>
    <string name="hint_change_psd_success">修改密码成功,请重新登录</string>
    <string name="hint_change_nick_success">昵称修改成功</string>
    <string name="hint_change_head_success">头像修改成功</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_main_products">主营商品</string>
    <string name="text_goods_comments">商品评价</string>
    <string name="text_all">全部</string>
    <string name="text_goods">商品</string>
    <string name="text_service">服务</string>
    <string name="text_last">最新</string>
    <string name="text_pic_video">图/视频</string>
    <string name="text_good_comment">好评</string>
    <string name="text_obligation">待付款</string>
    <string name="text_due">应付款</string>
    <string name="text_wait_for_receiving">待收货</string>
    <string name="text_finished">已完成</string>
    <string name="text_wait_for_evaluated">待评价</string>
    <string name="text_hint_protocol_policy">登录即同意并接受用户协议和隐私政策</string>
    <string name="text_hint_twice_input_not_same">两次输入不一致</string>
    <string name="text_hot_today">今日爆款</string>
    <string name="text_cancel_delete">再考虑下</string>
    <string name="text_confirm_delete">删除</string>
    <string name="text_change_psd">修改密码</string>
    <string name="text_confirm_submit">确认提交</string>
    <string name="text_change_nick">修改昵称</string>
    <string name="text_save">保存</string>
    <string name="text_save_pic">保存图片</string>
    <string name="text_phone">手机号码</string>
    <string name="text_location">所在地区</string>
    <string name="text_address">详细地址</string>
    <string name="text_my_tools">我的工具</string>
    <string name="text_go_close_account">去结算</string>
    <string name="text_go_pay">去支付</string>
    <string name="text_go_evaluated">去评价</string>
    <string name="text_share_to_friend">好友分享</string>
    <string name="text_settings">设置</string>
    <string name="text_now_version">当前版本</string>
    <string name="text_about_jthz">关于金天合纵</string>
    <string name="text_order_manage">订单管理</string>
    <string name="text_logout">退出登录</string>
    <string name="text_no_order">暂无订单</string>
    <string name="text_default_address">设为默认地址</string>
    <string name="text_invite_company">邀请企业</string>
    <string name="text_shipping_address">收货地址</string>
    <string name="text_btn_new_address">╋   新建收货地址</string>
    <string name="text_new_address">新建收货地址</string>
    <string name="text_edit_address">修改收货地址</string>
    <string name="text_consignee">收货人</string>
    <string name="text_confirm_receipt">确认收货</string>
    <string name="text_check_logistics">查看物流</string>
    <string name="text_logistics">物流信息</string>
    <string name="text_delete_order">删除订单</string>
    <string name="text_order_detail">订单详情</string>
    <string name="text_order_message">订单信息</string>
    <string name="text_order_number">订单编号:</string>
    <string name="text_order_time">下单时间:</string>
    <string name="text_payment_mode">支付方式:</string>
    <string name="text_distribution_mode">配送方式:</string>
    <string name="text_copy">复制</string>
    <string name="text_city_select">城市选择</string>
    <string name="text_default">默认</string>
    <string name="text_total_sum">商品总额</string>
    <string name="text_carriage">运费</string>
    <string name="text_actual_payment">实付款</string>
    <string name="text_payment">付款</string>
    <string name="text_cancel_order">取消订单</string>
    <string name="text_new_pwd">新密码</string>
    <string name="text_new_pwd_confirm">确认新密码</string>
    <string name="hint_code_usage">扫码进入</string>
    <string name="hint_input_consignee_name">请填写收货人姓名</string>
    <string name="hint_input_consignee_phone">请填写收货人手机号</string>
    <string name="hint_input_consignee_location">省市县区、乡镇等</string>
    <string name="hint_input_consignee_address">街道楼牌号等</string>
    <string name="hint_input_consignee_name_nonull">收货人不能为空</string>
    <string name="hint_input_nick_nonull">昵称不能为空</string>
    <string name="hint_input_code_nonull">验证码不能为空</string>
    <string name="hint_input_consignee_area">请选择收货地址</string>
    <string name="hint_input_new_nick">请输入新昵称</string>
    <string name="hint_goods_colse">该商品已下架</string>
    <string name="hint_goods_colse_shooping_cart">存在已下架商品</string>
    <string name="hint_new_password">提示：请输入6-8个字符，必须为字母+数字组合，区分大小写</string>
    <string name="hint_switch_default_address">每次下单会默认推荐使用该地址</string>
    <string name="hint_confirm_delete">确认删除?</string>
    <string name="hint_logout">确认退出登录?</string>
    <string name="hint_empty_shopping_cart">还没有商品，赶紧去添加吧～</string>
    <string name="hint_empty_address">暂无收货地址</string>
    <string name="hint_empty_logistics">查无结果</string>
    <string name="hint_empty_order">暂无订单</string>
    <string name="hint_delete_success">删除成功</string>
    <string name="text_join_shopping_cart_success">添加成功，在购物车等您哦~</string>
    <string name="text_confirm_order">确认订单</string>
    <string name="text_select_address">请选择地址</string>


</resources>