<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.mine.tools.adress.EditAddressActivity">
        <com.goldensky.framework.ui.view.TopActionBar
            android:id="@+id/top_bar_edit_address"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:centerText="@string/text_edit_address"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_consignee_edit_address"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/top_bar_edit_address"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="55dp"
            >
            <TextView
                android:id="@+id/tv_consignee_edit_address"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/text_consignee"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/et_consignee_edit_address"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="@+id/tv_consignee_edit_address"
                app:layout_constraintBottom_toBottomOf="@+id/tv_consignee_edit_address"
                android:layout_width="match_parent"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_input_consignee_name"
                android:layout_height="match_parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_phone_edit_address"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_consignee_edit_address"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="55dp"
            >
            <TextView
                android:id="@+id/tv_phone_edit_address"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/text_phone"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/et_phone_edit_address"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="@+id/tv_phone_edit_address"
                app:layout_constraintBottom_toBottomOf="@+id/tv_phone_edit_address"
                android:layout_width="match_parent"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_input_consignee_phone"
                android:layout_height="match_parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_region_edit_address"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_phone_edit_address"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="55dp"
            >
            <TextView
                android:id="@+id/tv_region_edit_address"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/text_location"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/et_region_edit_address"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="@+id/tv_region_edit_address"
                app:layout_constraintBottom_toBottomOf="@+id/tv_region_edit_address"
                android:layout_width="match_parent"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_input_consignee_location"
                android:layout_height="match_parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_address_edit_address"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_region_edit_address"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="110dp"
            >
            <TextView
                android:id="@+id/tv_address_edit_address"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="17dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/text_address"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/et_address_edit_address"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="15dp"
                android:hint="@string/hint_input_consignee_address"
                android:gravity="top"
                android:layout_marginBottom="17dp"
                android:layout_height="match_parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_is_default_edit_address"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_address_edit_address"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="72dp"
            >
            <TextView
                android:id="@+id/tv_is_default_edit_address"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="17dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/text_default_address"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                app:layout_constraintStart_toStartOf="@+id/tv_is_default_edit_address"
                app:layout_constraintTop_toBottomOf="@+id/tv_is_default_edit_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hint_switch_default_address"
                android:textSize="12sp"
                android:textColor="@color/color_888888"
                />
            <Switch
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"
                android:theme="@style/AppRedTheme"
                android:layout_marginRight="15dp"
                android:outlineAmbientShadowColor="@color/EA483F"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="315dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/shape_btn_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/text_save"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>