<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/v_status_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.goldensky.framework.ui.view.TopActionBar
                android:id="@+id/tab_bar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:centerText="@string/text_goods_comments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv_filter"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/rv_comments"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tab_bar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp">

                    <TextView
                        android:id="@+id/tv_all"
                        style="@style/comment_filter"
                        android:text="@string/text_all" />


                    <TextView
                        android:id="@+id/tv_last"
                        style="@style/comment_filter"
                        android:enabled="false"
                        android:text="@string/text_last" />

                    <TextView
                        android:id="@+id/tv_pic_video"
                        style="@style/comment_filter"
                        android:enabled="false"
                        android:text="@string/text_pic_video" />

                    <TextView
                        android:id="@+id/tv_good_comment"
                        style="@style/comment_filter"
                        android:enabled="false"
                        android:text="@string/text_good_comment" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingStart="15dp"
                android:paddingTop="20dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nsv_filter" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</layout>