<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/shape_pop_white_bg"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:text="@string/hint_logout"
            android:gravity="center"
            android:textSize="20sp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_EEEEEF"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/btn_cancel_logout"
                android:layout_width="0dp"
                android:text="@string/text_cancel"
                android:textColor="@color/EA483F"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_EEEEEF"
                />
            <TextView
                android:gravity="center"
                android:textColor="@color/EA483F"
                android:id="@+id/btn_confirm_logout"
                android:layout_width="0dp"
                android:text="@string/text_confirm"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
</layout>