<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginInfo"
            type="com.goldensky.vip.model.LoginInputModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="93dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/login_type_hint_company"
            android:textColor="@color/color_333333"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_phone_or_license"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:hint="@string/hint_input_phone_license"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="11"
            android:text="@={loginInfo.phoneOrLicense}"
            android:textColor="@color/color_999999"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_type" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#E6E6E6"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_or_license" />

        <EditText
            android:id="@+id/et_password_or_verification_code"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:background="#fff"
            android:hint="@string/hint_input_password"
            android:maxLength="20"
            android:text="@={loginInfo.passwordOrVerificationCode}"
            android:textColor="@color/color_999999"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_get_verification_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone_or_license" />

        <com.goldensky.vip.base.ui.view.CountDownButton
            android:id="@+id/btn_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_get_verification_code"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/hint_get_verification_code"
            android:textColor="@color/color_023894"
            app:countHint="@string/hint_get_verification_code_count_hint"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_password_or_verification_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_password_or_verification_code" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#E6E6E6"
            app:layout_constraintTop_toBottomOf="@+id/et_password_or_verification_code" />

        <TextView
            android:id="@+id/tv_unable_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="25dp"
            android:text="@string/text_forget_password"
            android:textColor="@color/color_999999"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_get_verification_code" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/shape_blue_gradient"
            android:gravity="center"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_unable_login" />

        <TextView
            android:id="@+id/tv_regeist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:text="@string/text_register"
            android:textColor="@color/color_666666"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_change_login"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:gravity="center"
                android:text="@string/text_other_login_type"
                android:textColor="@color/color_333333"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/login_type_verification_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_change_login" />

            <TextView
                android:id="@+id/tv_change_login_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingTop="16dp"
                android:text="@string/text_login_type_verification_code"
                android:textColor="@color/color_333333"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_change_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>